# ollama-eswinP550

ml/backend/: backend.go
ml/backend/ggml/ggml/src/: CMakeLists.txt
ml/backend/ggml/ggml/src/ggml-ennp/: CMakeLists.txt  common.c  common.h  ggml-ennp.c
